Link to react application - Main branch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-This repo is loading...Patience please :)
+    <h1>This repo is loading...Patience please :)</h1>
+    <h2><a href="http://juanancarrillo.github.io/react_tic_tac_toe">My first application</a></h2>
 </body>
 
 </html>
