add articles and images

--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<title>Juanan Carrillo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog de Motos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <h1>This repo is loading...Patience please :)</h1>
-</body>
+    <header>
+        <h1>Blog de Motos</h1>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="articleOne.html">Entrada 1</a>
+            <a href="articleTwo.html">Entrada 2</a>
+            <a href="articleThree.html">Entrada 3</a>
+        </nav>
+    </header>
 
+    <main>
+        <section class="intro">
+            <h2>Bienvenido a mi Blog de Motos</h2>
+            <p>Un espacio dedicado a la velocidad, el diseño y la pasión por las dos ruedas. Aquí comparto información, imágenes y experiencias sobre las motocicletas más icónicas del mundo.</p>
+        </section>
+
+        <section class="entradas">
+            <a href="articleOne.html" class="card-link">
+                <article>
+                    <img src="assets/ducati.png" alt="Ducati Panigale V4 R">
+                    <h3>Ducati Panigale V4 R</h3>
+                    <p>La potencia italiana hecha arte. Descubre cómo Ducati combina velocidad, estilo y tecnología en esta máquina legendaria.</p>
+                </article>
+            </a>
+
+            <a href="articleTwo.html" class="card-link">
+                <article>
+                    <img src="assets/yamaha.png" alt="Yamaha R1">
+                    <h3>Yamaha R1</h3>
+                    <p>Inspirada en MotoGP, la R1 lleva la precisión japonesa a otro nivel con su increíble rendimiento en carretera y pista.</p>
+                </article>
+            </a>
+
+            <a href="articleThree.html" class="card-link">
+                <article>
+                    <img src="assets/bmw.png" alt="BMW S1000RR">
+                    <h3>BMW S1000RR</h3>
+                    <p>La superbike alemana que redefine la perfección técnica. Potencia, equilibrio y diseño agresivo en una sola máquina.</p>
+                </article>
+            </a>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Blog de Motos - Juan Antonio Carrillo Corcoles</p>
+    </footer>
+</body>
 </html>
